# -agent

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  api.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: context.rs  mod.rs  prompts.rs  tools.rs
src-tauri/src/llm/: client.rs
src-tauri/src/models/: character.rs  mod.rs  plot.rs  project.rs
src-tauri/src/plugins/: mcp.rs  mod.rs  skills.rs  types.rs  util.rs
src-tauri/src/storage/: audit.rs  keyring.rs  mod.rs
src/components/: AgentChat.tsx  ChapterEditor.tsx  ChapterManager.tsx  ChatCreator.tsx  CreateProjectDialog.tsx  CreativeConstraintsPanel.tsx  Dashboard.tsx  ErrorBoundary.tsx  ExportDialog.tsx  GenreManager.tsx  McpManager.tsx  NovelList.tsx  OutlineImporter.tsx  PromptLibrary.tsx  SettingsPage.tsx  Sidebar.tsx  SkillsManager.tsx  WritingGoals.tsx
src/utils/: batchController.ts  buildCreativeConstraints.ts  creativeConstraints.ts  outlineExtractors.ts  outlineParser.ts  promptStore.ts  sensitiveWords.ts  writingLog.ts
