[package]
name = "qiyuan"
version = "0.1.0"
description = "AI Novel Writing Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "retl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6.0.0"
tauri-plugin-dialog = "2.6.0"
lazy_static = "1.4"
unicode-normalization = "0.1"
url = "2.5"
urlencoding = "2.1"

